# music_organizer_clean

./: .env.example  .gitignore  CLAUDE.md  Initial_Load_Workflow.MD  bpm_test.py  continuity.md  pipeline.py  pyproject.toml  pytest.ini  requirements.txt
analysis/: acousticbrainz.py  acoustid.py  bpm.py  discogs.py  ffmpeg.py  lastfm.py
config/: __init__.py  logging.py
db/: __init__.py  database.py  db_functions.py  db_update.py  initial_load_pandas.py  setup_test_env.py  useful_queries.py
maint/: artists.py  bpm_conversion.py
plex/: __init__.py  plex_library.py
scripts/: resume_production.py  run_production.py
test/: conftest.py  db_test.py  db_update_test.py  e2e2.py  e2e_test.py  lib_test.py  test_Database.py  test_acousticbrainz.py  test_bpm_pipeline.py  test_config.py  test_e2e_pipeline.py  test_incremental_enrichment.py  test_incremental_update.py  test_lastfm.py  test_lastfm_db_integration.py  test_metadata_refresh.py  test_plex.py
