[project]
name = "music_organizer"
version = "0.1.0"
description = "Music metadata extraction and enrichment pipeline"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled by formatter